update toLocalString on , set global for  num of donors shown

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,7 +34,7 @@ p {
   color: var(--grey);
   font-size: 1rem;
   line-height: 1.5rem;
-  font-weight: 100;
+  font-weight: 400; /* increasing font-size on mobile since `100` is hard to read */
 }
 p:not(:last-of-type) {
   margin-bottom: 0
@@ -153,7 +153,7 @@ strong {
   opacity: .5;
 }
 .card_front-donors_progress--complete {
-  width: 75%;
+  width: 17%;
   height: 100%;
   position: absolute;
   top: 0;
@@ -203,7 +203,7 @@ strong {
   opacity: .2;
 }
 .card_back--article-table_trow:last-of-type::after {
-  padding: 20px 0;
+  padding: 16px 0;
   border-bottom: 1px solid;
 }
 .card_back--article-table_trow {
@@ -224,7 +224,7 @@ strong {
   text-align: center;
 }
 .card_back--article-table_td {
-  font-weight: 100;
+  font-weight: 400; /* increasing font-size on mobile since `100` is hard to read */
   width: 33.33%;
   padding: .65rem 0;
   white-space: nowrap;
@@ -254,5 +254,9 @@ strong {
   }
   .card--container {
     width: 400px;
+  }
+  p,
+  .card_back--article-table_td {
+    font-weight: 100;
   }
 }
